--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <!-- 🎬 Video Player -->
     <div class="video-container">
       <video id="landscapeVideo" autoplay muted playsinline loop poster="images/poster.jpg">
-        <source src="videos/landscape_mobile.mp4" type="video/mp4">
+        <source src="videos/don.mp4" type="video/mp4">
       </video>
 
       <!-- 🔊 & 📱 Controls inside player -->
@@ -179,25 +179,36 @@
       <input type="text" placeholder="Search videos..." />
     </div>
 
-    <!-- 🖼 Temporary Song Slideshow -->
+    <!-- 🖼 Song Slideshow with 6 placeholders -->
     <div class="slideshow" id="slideshow">
       <div class="slide" data-video="videos/cantilan_mobile.mp4">
         <img src="images/cantilan.jpg" alt="Song 1">
         <div class="caption">🎵 Cantilan by Zandro</div>
       </div>
-      <div class="slide" data-video="videos/surigao_full.mp4">
+      <div class="slide" data-video="videos/surigao.mp4">
         <img src="images/surigao.jpg" alt="Song 2">
-        <div class="caption">🎵 WSurigaonon by Zandro</div>
+        <div class="caption">🎵 Surigaonon by Zandro</div>
       </div>
-      <div class="slide" data-video="videos/song3.mp4">
-        <img src="images/song3.jpg" alt="Song 3">
-        <div class="caption">🎵 Don Jose Guardo – Bridge</div>
+      <div class="slide" data-video="videos/don.mp4">
+        <img src="images/don.jpg" alt="Song 3">
+        <div class="caption">🎵 Don Jose Guardo By Gradio</div>
       </div>
-    </div>
+      <div class="slide" data-video="videos/manoroy.mp4">
+        <img src="images/manoroy.jpg" alt="Song 4">
+        <div class="caption">🎵 Manoroy sa Cantilan</div>
+      </div>
+      <div class="slide" data-video="videos/don.mp4">
+        <img src="images/don.jpg" alt="Song 3">
+        <div class="caption">🎵 Don Jose Guardo By Gradio</div>
+      </div>
+      <div class="slide" data-video="videos/cantilan_mobile.mp4">
+        <img src="images/cantilan.jpg" alt="Song 1">
+        <div class="caption">🎵 Cantilan by Zandro</div>
+      </div>
 
     <!-- 📝 Footer -->
     <footer>
-      "We make a living by what we get, but we make a life by what we give"
+     
     </footer>
   </div>
 
