--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <header>
       <img src="images/logo.png" alt="Logo" class="logo" />
       <h1>Landscape Video</h1>
-      <a href="home.html" class="nav-home">🏠 Home</a>
+      <a href="https://vtqit.github.io/GradioCantilan/" class="nav-home">🏠 Home</a>
     </header>
 
     <!-- 🎬 Video Player -->
